--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
-        <article>
+        <article class="articlehome">
             <h1>Titulo</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius assumenda possimus modi consequatur autem cupiditate odit fuga a iste molestias illo vel corrupti, numquam, asperiores labore aspernatur excepturi molestiae et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt numquam perferendis dignissimos rem placeat minima, repellat vel illum facilis omnis explicabo quia laborum porro consequatur libero laboriosam ab nostrum sequi.</p>
         </article>
-        <aside>
+        <aside class="imghome">
             <img src="img/img-home.png" alt="">
         </aside>
     <footer class="footer">
