--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Contato</title>
     <link rel="stylesheet" href="css/folhadeestilo.css">
 </head>
 
@@ -37,7 +37,15 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
-
+    <article class="contato">
+        <form>
+            <p><label>Nome: <input type="text" name="" id=""></label></p>
+            <p><label>E-mail: <input type="email" name="" id=""></label></p>
+            <p><label>Comentários: <textarea name="" id="" cols="30" rows="10"></textarea></label></p>
+            <p><button>Enviar</button></p>
+        </form>
+        
+    </article>
     <footer class="footer">
         <h4>Mapa do site</h4>
         <ul>
