--- a/emissoras.html
+++ b/emissoras.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Emissoras</title>
     <link rel="stylesheet" href="css/folhadeestilo.css">
 </head>
 
@@ -37,6 +37,73 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
+    <article>
+        <h1> Emissoras brasileiras </h1>
+        <p>Existem muitas emissoras televisivas, foi selecionado as principais da tv aberta do Brasil.</p>
+  
+        <h2> Bandeirantes </h2>
+        <p>A emissora bandeirantes foi fundado em 13 de maio de 1967, passou a produzir toda sua programação em cores. Em
+          1982 foi a primeira a fazer transmissão via satélite. Só comecou a se chamar Band devido a radio bandeirantes e
+          foi a primeira que começou a usar o logotipo ou marca d’água no canto do video. Seus programas infantis foram:
+          Band Kids, Contando Histórias, Mundo Animado e Turma do Lambe-Lambe.</p>
+        <footer  class="fontes">
+            <a href="https://pt.wikipedia.org/wiki/Rede_Bandeirantes">Fonte</a>
+        </footer>
+  
+        <h2> Cultura </h2>
+        <p> Foi inaugurada em 1960 por Assis Chateaubriand, e relançada em 15 de junho de 1969 pela fundação Padre
+          Anchieta, produzindo e transmitindo programas infantis para diversas localidades do Brasil. E alguns desses
+          programas infantis eram: Bambalalão, Banho de Aventura, Cambalhota (programa de televisão), Castelo Rá-Tim-Bum,
+          Catalendas, Cocoricó, Escola dos Monstros, Glub Glub, Ilha Rá-Tim-Bum, Lucas e Juquinha em Perigo! Perigo!
+          Perigo!, Mundo da Lua, O Professor, Os Cupins, Quintal da Cultura, Rá-Tim-Bum, Teatro Rá-Tim-Bum, Tromba Trem,
+          Vila Sésamo, Vila Sésamo (2007), X-Tudo etc. </p>
+        <footer  class="fontes">
+              <a href="https://pt.wikipedia.org/wiki/TV_Cultura">Fonte</a>
+        </footer>
+  
+        <h2> Globo </h2>
+        <p> Foi Fundada em 26 de abril de 1965, por Roberto Marinho. Sendo a emissora da tv aberta mais assistida no
+          Brasil, seu sucesso veio devido a suas telenovelas, assistida por mais de 200 milhões de pessoas diariamente
+          tanto no Brasil quanto no exterior. Seus programas infantis foram: Angel Mix, Balão Mágico, Bobeou Dançou,
+          Capitão Furacão, Conexão Xuxa, Disney Club, Festival de Desenhos, Gente Inocente, Globo Cor Especial, HB
+          (programa de televisão), HB (programa de televisão), Paredão da Xuxa, Show do Mallandro, The Voice Kids
+          (Brasil), A Turma do Didi, A Turma da Garrafinha, TV Colosso, TV Globinho, Uni Duni Tê, Vinicius para Crianças -
+          Arca de Noé, Xou da Xuxa, Xuper Star, Xuxa (programa de televisão), Xuxa Hits, Xuxa no Mundo da Imaginação, Xuxa
+          Park etc. </p>
+            <footer  class="fontes">
+              <a href="https://pt.wikipedia.org/wiki/TV_Globo">Fonte</a>
+            </footer>
+
+  
+        <h2> Record </h2>
+        <p> A Rede Record foi fundada em 27 de setembro de 1953 por Paulo Machado de Carvalho. Atualmente, é a segunda
+          maior emissora da tv aberta no Brasil, teve várias telenovelas, minisséries e séries. Seus programas infantis
+          foram: Desenho Mania, Eliana (2004), Eliana & Alegria, Eliana na Fábrica Maluca, Grande Gincana Kibon, Mara
+          Maravilha Show, Programa Pullman Junior, A Turma do Sete etc. </p>
+            <footer  class="fontes">
+              <a href="https://pt.wikipedia.org/wiki/RecordTV">Fonte</a>
+            </footer>
+   
+        <h2> Sbt </h2>
+        <p> Fundada em 19 de agosto de 1981 por Silvio Santos. Sua grade de programação é abrangente, com varios gêneros
+          de produção e reprodução. É a terceira rede de televisão mais vista no Brasil, seus programas infantis mais
+          populares eram: Bom Dia & Cia, Bozo, Casa da Angélica, Clube do Carrossel, Disney Club, Disney CRUJ, Mundo
+          Disney, Oradukapeta, Passa ou Repassa, Programa do Bozo (2013), Sábado Animado, Sessão Desenho, Show da Simony,
+          Show Maravilha, TV Animal, Zapping Zone, Zuzubalândia etc. </p>
+            <footer  class="fontes">
+              <a href="https://pt.wikipedia.org/wiki/Sistema_Brasileiro_de_Televis%C3%A3oa">Fonte</a>
+            </footer>
+      </article>
+  
+      <aside>
+  
+        <img src="img/logo-band.png" alt="logo band">
+        <img src="img/logo-cultura.png" alt="logo cultura">
+        <img src="img/logo-globo.png" alt="logo globo">
+        <img src="img/logo-record.png" alt="logo record">
+        <img src="img/logo-sbt.png" alt="logo sbt">
+  
+      </aside>
 
     <footer class="footer">
         <h4>Mapa do site</h4>
