--- a/sitio-do-picapau-amarelo.html
+++ b/sitio-do-picapau-amarelo.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Sitio do Picapau Amarelo</title>
     <link rel="stylesheet" href="css/folhadeestilo.css">
 </head>
 
