--- a/castelo-ra-tim-bum.html
+++ b/castelo-ra-tim-bum.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Castelo Rá-Tim-Bum</title>
     <link rel="stylesheet" href="css/folhadeestilo.css">
 </head>
 
