--- a/irmao-do-jorel.html
+++ b/irmao-do-jorel.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Irmão do Jorel</title>
     <link rel="stylesheet" href="css/folhadeestilo.css">
 </head>
 
