--- a/programas.html
+++ b/programas.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Programas</title>
     <link rel="stylesheet" href="css/folhadeestilo.css">
 </head>
 
