--- a/quem-somos.html
+++ b/quem-somos.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Quem Somos</title>
     <link rel="stylesheet" href="css/folhadeestilo.css">
 </head>
 
 <body>
     <header>
-        <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
+       <a href="index.html"><img src="img/logo-fmn.png" alt="Logo Fofurinhas Musicas de Narnia"></a>
     </header>
     <nav class="nav">
         <ul>
@@ -37,6 +37,14 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
+    <article class="">
+        <h1> Quem Somos</h1>
+        <p>Nós somos os Fofurinhas Musicais de Nárnia, um grupo da Fatec São Roque. Os integrantes de realização deste
+          trabalho são: Jaquelini Cristina Flavio (RA: 2650832123022), Reginaldo Aparecido de Moraes Junior (RA:
+          2650832123004) e Thomas Gonçalves Pereira (RA: 2650832123011). Foi proposto para desenvolvermos o Projeto
+          Integrador, com todo conteúdo aprendido nesse semestre. Há 6 tipos de layouts, com um conteúdo sobre desenhos e
+          programas brasileiros infantis. ✌😊</p>
+      </article>
 
     <footer class="footer">
         <h4>Mapa do site</h4>
