--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Quiz</title>
     <link rel="stylesheet" href="css/folhadeestilo.css">
 </head>
 
@@ -37,6 +37,84 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
+
+    <article class="quiz">
+        <form>
+            <fieldset>
+                <legend>Qual o ano de estreia do Mundo da lua?</legend>
+                <p><label><input type="radio" name=q1>1990</label></p>
+                <p><label><input type="radio" name=q1>1991</label></p>
+                <p><label><input type="radio" name=q1>1994</label></p>
+            </fieldset>
+            <fieldset>
+                <legend>Luciano Amaral fez quais personagens?</legend>
+                <p><label><input type="radio" name="q2">Lucas e Pedro</label></p>
+                <p><label><input type="radio" name="q2">Abel e Caim</label></p>
+                <p><label><input type="radio" name="q2">Tico e Teco</label></p>
+            </fieldset>
+            <fieldset>
+                <legend>Quantos anos o ator do Lucas Silva e Silva tinha na época da série?</legend>
+                <p><label><input type="radio" name="q3">8</label></p>
+                <p><label><input type="radio" name="q3">9</label></p>
+                <p><label><input type="radio" name="q3">10</label></p>
+            </fieldset>
+            <fieldset>
+                <legend>Qual o nome do ator que interpretava o Dr. Victor?</legend>
+                <p><label><input type="radio" name="q4">Sergio Memarti</label></p>
+                <p><label><input type="radio" name="q4">Sérgio Mamberti</label></p>
+                <p><label><input type="radio" name="q4">Serjio Mamba</label></p>
+            </fieldset>
+            <fieldset>
+                <legend>Qual o nome do Autor de sítio do picapau amarelo?</legend>
+                <p><label><input type="radio" name="q5">Monteiro Lobato</label></p>
+                <p><label><input type="radio" name="q5">Ana Maria Machado</label></p>
+                <p><label><input type="radio" name="q5">Pedro Bandeira</label></p>
+            </fieldset>
+            <fieldset>
+                <legend>Em que ano estreia Gub Glub?</legend>
+                <p><label><input type="radio" name="q6">1990</label></p>
+                <p><label><input type="radio" name="q6">1999</label></p>
+                <p><label><input type="radio" name="q6">1991</label></p>
+            </fieldset>
+            <fieldset>
+                <legend>Quantos anos o Júlio do cocorico tinha?</legend>
+                <p><label><input type="radio" name="q7">10</label></p>
+                <p><label><input type="radio" name="q7">8</label></p>
+                <p><label><input type="radio" name="q7">6</label></p>
+            </fieldset>
+            <!-- <fieldset>
+                <legend>O que o porteiro do Castelo Rá-Tim-Bum fala?</legend>
+                <p><label><input type="radio" name="q8">"Klift Kloft Still, a porta se abriu!"</label></p>
+                <p><label><input type="radio" name="q8">"Open door, porta aberta!"</label></p>
+                <p><label><input type="radio" name="q8">"Come in, the door is open, entre a porta está aberta!"</label></p>
+            </fieldset>
+            <fieldset>
+                <legend>Qual o nome do ator que interpretava o Dr. Victor?</legend>
+                <p><label><input type="radio" name="q9"></label></p>
+                <p><label><input type="radio" name="q9"></label></p>
+                <p><label><input type="radio" name="q9"></label></p>
+            </fieldset>
+            <fieldset>
+                <legend>Qual o nome do ator que interpretava o Dr. Victor?</legend>
+                <p><label><input type="radio" name="q10"></label></p>
+                <p><label><input type="radio" name="q10"></label></p>
+                <p><label><input type="radio" name="q10"></label></p>
+            </fieldset>
+            <fieldset>
+                <legend>Qual o nome do ator que interpretava o Dr. Victor?</legend>
+                <p><label><input type="radio" name="q11"></label></p>
+                <p><label><input type="radio" name="q11"></label></p>
+                <p><label><input type="radio" name="q11"></label></p>
+            </fieldset>
+            <fieldset>
+                <legend>Qual o nome do ator que interpretava o Dr. Victor?</legend>
+                <p><label><input type="radio" name="q12"></label></p>
+                <p><label><input type="radio" name="q12"></label></p>
+                <p><label><input type="radio" name="q12"></label></p>
+            </fieldset> -->
+        </form>
+
+    </article>
 
     <footer class="footer">
         <h4>Mapa do site</h4>
