--- a/trilha-sonora.html
+++ b/trilha-sonora.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Trilha Sonora</title>
     <link rel="stylesheet" href="css/folhadeestilo.css">
 </head>
 
@@ -37,6 +37,30 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
+    <section class="trilha">
+        <a href="https://www.youtube.com/watch?v=O9snMaJj62Y" target="_blank"><img src="img/abertura_casteloratimbum.jpg" alt="castelo ra tim bum"></a>
+        <a href="https://www.youtube.com/watch?v=s9p9m0ebJmg" target="_blank"><img src="img/ratinhotomandobanhp.jpg"
+            alt="ratinho tomando banho"></a>
+        <a href="https://www.youtube.com/watch?v=UjUsAQc0T60" target="_blank"><img src="img/aberturacocorico.jpg"
+            alt=" cocorico"></a>
+        <a href="https://www.youtube.com/watch?v=IEBbg20WRsM" target="_blank"><img src="img/aberturatrombatrem.jpg"
+            alt="tromba trem"></a>
+        <a href="https://www.youtube.com/watch?v=yApJ7F4z0a4" target="_blank"><img src="img/aberturadogmons.jpg"
+            alt="dogmons"></a>
+        <a href="https://www.youtube.com/watch?v=p4uy4faQLgM" target="_blank"><img src="img/aberturairmaodojorel.jpg"
+            alt="irmão do jorel"></a>
+        <a href="https://www.youtube.com/watch?v=7KEt06ZljRA" target="_blank"><img src="img/aberturafudencio.jpg"
+            alt="fudencio"></a>
+        <a href="https://www.youtube.com/watch?v=GO94XCuXEqs" target="_blank"><img src="img/abertura_sitiodopicapau_amarelo.jpg" alt="sitio do pica-pau amarelo"></a>
+        <a href="https://www.youtube.com/watch?v=Pia8EBfzhF8" target="_blank"><img src="img/superfantastico.jpg"
+            alt="super fantastico"></a>
+        <a href="https://www.youtube.com/watch?v=TpcbIxLbDGk" target="_blank"><img src="img/abertura_ratimbum.jpg"
+            alt="ra tim bum"></a>
+        <a href="https://www.youtube.com/watch?v=c-WqcIUP5Gg" target="_blank"><img src="img/abertura_mundodalua.jpg"
+            alt="mundo da lua"></a>
+        <a href="https://www.youtube.com/watch?v=yflyejDF5Ao" target="_blank"><img src="img/abertura_ilharatimbum.jpg"
+            alt="ilha ra tim bum""></a>
+    </section>
 
     <footer class="footer">
         <h4>Mapa do site</h4>
