--- a/turma-da-monica.html
+++ b/turma-da-monica.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Turma da Mônica</title>
     <link rel="stylesheet" href="css/folhadeestilo.css">
 </head>
 
