--- a/curiosidades.html
+++ b/curiosidades.html
@@ -141,7 +141,7 @@
             interpretado pelo então garoto Samuel Costa.
           <li> Cada episódio da série tinha um tema diferente que levava à identificação do telespectador com o personagem e
             à reflexão sobre a realidade e os conflitos das diferentes idades
-          <li> As gravações duraram seis meses e foram realizadas em um estúdio de 600m2, que reproduzia um sobrado
+          <li> As gravações duraram seis meses e foram realizadas em um estúdio de 600m², que reproduzia um sobrado
             completo, com o quarto do Menino Maluquinho, o quarto de seus pais, sala, cozinha e banheiro.
           <li> O programa ganhou o Prêmio Japão 2006, do NHK Japan Prize, foi indicada a melhor série infantojuvenil pela
             APCA, e foi finalista ao Prêmio Emmy Award 2007.
