--- a/desenhos.html
+++ b/desenhos.html
@@ -37,7 +37,14 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
-
+    <aside>
+        <img src="img/desenhos/professor-ambrosio.jpg" alt="">
+        <img src="img/desenhos/astrobaldo.jpg" alt="">
+        <img src="img/desenhos/boris-rufus.jpg" alt="">
+        <img src="img/desenhos/dogmons.jpg" alt="">
+        <img src="img/desenhos/fudencio.jpg" alt="">
+        <img src="img/desenhos/irmao-jorel.jpg" alt="">
+    </aside>
     <footer class="footer">
         <h4>Mapa do site</h4>
         <ul>
