--- a/emissoras.html
+++ b/emissoras.html
@@ -97,11 +97,11 @@
   
       <aside>
   
-        <img src="img/logo-band.png" alt="logo band">
-        <img src="img/logo-cultura.png" alt="logo cultura">
-        <img src="img/logo-globo.png" alt="logo globo">
-        <img src="img/logo-record.png" alt="logo record">
-        <img src="img/logo-sbt.png" alt="logo sbt">
+        <img src="img/emissoras/logo-band.png" alt="logo band">
+        <img src="img/emissoras/logo-cultura.png" alt="logo cultura">
+        <img src="img/emissoras/logo-globo.png" alt="logo globo">
+        <img src="img/emissoras/logo-record.png" alt="logo record">
+        <img src="img/emissoras/logo-sbt.png" alt="logo sbt">
   
       </aside>
 
