--- a/estudios.html
+++ b/estudios.html
@@ -48,6 +48,15 @@
             Discovery Kids, Globo e Hasbro. O desenho animado "Irmão do Jorel" a tornou vencedora do prêmio Quirino de
             melhor
             animação. </p>
+            <ul>
+                <li>Tromba Trem</li>
+                <li>Historietas Assombradas (para Crianças Malcriadas)</li>
+                <li>Irmão do Jorel</li>
+                <li>As Microaventuras de Tito e Muda</li>
+                <li>Tuiga</li>
+                <li>Gigablaster</li>
+                <li>Ico Bit Zip</li>
+            </ul>
 
         <h2> Fish Films</h2>
         <p>Sua matriz fica em Curitiba – PR trabalham com curtas, longas, series, documentários, livros e live action. Em
@@ -67,6 +76,11 @@
             até ilustrações, as produções que fizeram mais sucesso foram: Super Drags (Netflix), Any Malu a primeira
             youtuber
             em desenho animado.</p>
+            <ul>
+                <li>Super Drags</li>
+                <li>O (Sur)real Mundo de Any Malu</li>
+                <li>Any Malu Show</li>
+            </ul>
 
         <h2> Split Studio</h2>
         <p>A Split Studio já trabalhou com grande empresas, como a Cartoon Network, Nickelodeon, Mauricio de Souza, Globo e
@@ -81,12 +95,36 @@
             animações 2D e 3D a storyboard. Tiveram participações no filme Tigrão – O Filme, A Pequena Sereia II entre
             outros
             e foram indicados.</p>
+            <ul>
+                <li>Uma História de Amor e Fúria</li>
+                <li>SOS Fada Manu</li>
+                <li>Escola pra Cachorro</li>
+                <li>Juninho Play e Família</li>
+                <li>Turma da Mônica Jovem</li>
+            </ul>
 
         <h2> 44 Toons</h2>
         <p>Estão no mercado a mais de 10 anos, dedicam a produção de filmes, curtas e games. Sua sede fica em São Paulo, no
             Sumarezinho. Os principais trabalhos do estúdio foram “Nilba e os Desastronautas”, “Osmar, a Primeira Fatia do
             Pão
             de Forma”, “Lasanha Assassina” e “Super Herói Fora de Série”. </p>
+            <h3>Séries de TV</h3>
+            <ul>
+                <li>Nilba e os Desastronautas </li>
+                <li>Osmar, a Primeira Fatia do Pão de Forma</li>
+                <li>Tordesilhas</li>
+                <li>Bobolândia Monstrolândia</li>
+            </ul>
+            <h3>Longa-metragem</h3>
+            <ul>
+                <li>BugiGangue no Espaço</li>
+            </ul>
+            <h3>Curtas-metragens</h3>
+            <ul>
+                <li>A Lasanha Assassina</li>
+                <li>Osmar, a Primeira Fatia do Pão de Forma</li>
+                <li>BugiGangue Controle Terremoto (2010) </li>
+            </ul>
 
         <h2> Zombie Studio</h2>
         <p>São especializados em animações 3D e na criacao de personagens realistas, sempre dando muita atenção aos
@@ -102,6 +140,16 @@
             Sena. A sede comecou em São Paulo, são várias espalhadas pela cidade e no Rio de Janeiro. Eles são responsáveis
             pelas animações do Carrossel e da Turma da Mônica. Já trabalharam com grandes empresas como a Disney Channel,
             Disney Junior entre outras.</p>
+            <ul>
+                <li>O Diário de Mika</li>
+                <li>Zuzubalândia (animação)</li>
+                <li>Carrossel em Desenho Animado </li>
+                <li>Zupt! com o Senninha </li>
+                <li>Tronquinho e Pão de Queijo </li>
+                <li>Midinho, o Pequeno Missionário</li>
+                <li>Turminha da Graça</li>
+                <li>Senninha na Pista Maluca</li>
+            </ul>
 
         <h2> Birdo Studio</h2>
         <p>Estúdio Brasileiro, sua sede se localiza em São Paulo. Seus proprietários são: Luciana Eguti e Paulo Muppet. Foi
@@ -114,11 +162,11 @@
     </article>
 
     <aside class="img-estudios">
-    <img src="img/copa_estudios.jpg" alt="copa estudios">
-    <img src="img/combo_studios.jpg" alt="combo studios">
-    <img src="img/Lightstar_studios.jpg" alt="light star">
-    <img src="img/44toons.jpg" alt="44 toons">
-    <img src="img/supertoons.jpg" alt="super toons">
+    <img src="img/estudios/copa-estudios.jpg" alt="copa estudios">
+    <img src="img/estudios/combo-studios.jpg" alt="combo studios">
+    <img src="img/estudios/lightstar-studios.jpg" alt="light star">
+    <img src="img/estudios/44toons.jpg" alt="44 toons">
+    <img src="img/estudios/supertoons.jpg" alt="super toons">
     </aside>
 
     <footer class="footer">
