--- a/quiz.html
+++ b/quiz.html
@@ -82,36 +82,36 @@
                 <p><label><input type="radio" name="q7">8</label></p>
                 <p><label><input type="radio" name="q7">6</label></p>
             </fieldset>
-            <!-- <fieldset>
+            <fieldset>
+                <legend>Qual o nome da melhor amiga do irmão de Jorel?</legend>
+                <p><label><input type="radio" name="q8">Lora</label></p>
+                <p><label><input type="radio" name="q8">Carla</label></p>
+                <p><label><input type="radio" name="q8">Lara</label></p>
+            </fieldset>
+            <fieldset>
+                <legend>Qual é o personagem principal do irmão de Jorel?</legend>
+                <p><label><input type="radio" name="q9">Vovó juju</label></p>
+                <p><label><input type="radio" name="q9">Jorel</label></p>
+                <p><label><input type="radio" name="q9">irmão do Jorel</label></p>
+            </fieldset>
+            <fieldset>
+                <legend>Qual é o nome do valentão da sala do irmão de Jorel?</legend>
+                <p><label><input type="radio" name="q10">Tosh</label></p>
+                <p><label><input type="radio" name="q10">Billy Doidão</label></p>
+                <p><label><input type="radio" name="q10">Samantha</label></p>
+            </fieldset>
+            <fieldset>
+                <legend>Qual o nome do pato da vovó juju?</legend>
+                <p><label><input type="radio" name="q12">Reginaldo</label></p>
+                <p><label><input type="radio" name="q12">Gesonel</label></p>
+                <p><label><input type="radio" name="q12">Syd Vinicius  </label></p>
+            </fieldset>
+            <fieldset>
                 <legend>O que o porteiro do Castelo Rá-Tim-Bum fala?</legend>
-                <p><label><input type="radio" name="q8">"Klift Kloft Still, a porta se abriu!"</label></p>
-                <p><label><input type="radio" name="q8">"Open door, porta aberta!"</label></p>
-                <p><label><input type="radio" name="q8">"Come in, the door is open, entre a porta está aberta!"</label></p>
+                <p><label><input type="radio" name="q12">“Klift Kloft Still, a porta se abriu!”</label></p>
+                <p><label><input type="radio" name="q12">“Open door, porta aberta!”</label></p>
+                <p><label><input type="radio" name="q12">“Come in, the door is open, entre a porta está aberta!”</label></p>
             </fieldset>
-            <fieldset>
-                <legend>Qual o nome do ator que interpretava o Dr. Victor?</legend>
-                <p><label><input type="radio" name="q9"></label></p>
-                <p><label><input type="radio" name="q9"></label></p>
-                <p><label><input type="radio" name="q9"></label></p>
-            </fieldset>
-            <fieldset>
-                <legend>Qual o nome do ator que interpretava o Dr. Victor?</legend>
-                <p><label><input type="radio" name="q10"></label></p>
-                <p><label><input type="radio" name="q10"></label></p>
-                <p><label><input type="radio" name="q10"></label></p>
-            </fieldset>
-            <fieldset>
-                <legend>Qual o nome do ator que interpretava o Dr. Victor?</legend>
-                <p><label><input type="radio" name="q11"></label></p>
-                <p><label><input type="radio" name="q11"></label></p>
-                <p><label><input type="radio" name="q11"></label></p>
-            </fieldset>
-            <fieldset>
-                <legend>Qual o nome do ator que interpretava o Dr. Victor?</legend>
-                <p><label><input type="radio" name="q12"></label></p>
-                <p><label><input type="radio" name="q12"></label></p>
-                <p><label><input type="radio" name="q12"></label></p>
-            </fieldset> -->
         </form>
 
     </article>
