--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </ul>
     </nav>
         <article class="articlehome">
-            <h1>Titulo</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius assumenda possimus modi consequatur autem cupiditate odit fuga a iste molestias illo vel corrupti, numquam, asperiores labore aspernatur excepturi molestiae et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt numquam perferendis dignissimos rem placeat minima, repellat vel illum facilis omnis explicabo quia laborum porro consequatur libero laboriosam ab nostrum sequi.</p>
+            <h1>Nostalgia</h1>
+            <p>Você se lembra do primeiro desenho brasileiro que assistiu em nossa TV aberta? ou do primeiro programa que assistiu? Acompanhado de muita nostalgia, atualidades e muita diversão, nosso site lhes apresentam tudo isso e mais um pouco. Além disso, contamos com um quiz super maneiro para testar seus conhecimentos sobre o setor audiovisual de nosso país, há também uma aba com as curiosidades, na qual vocês poderão descobrir diversas coisas legais sobre os desenhos, programas e atores envolvidos nas obras</p>
         </article>
         <aside class="imghome">
             <img src="img/img-home.png" alt="">
