--- a/index.html
+++ b/index.html
@@ -40,37 +40,41 @@
         <article class="articlehome">
             <h1>Nostalgia</h1>
             <p>Você se lembra do primeiro desenho brasileiro que assistiu em nossa TV aberta? ou do primeiro programa que assistiu? Acompanhado de muita nostalgia, atualidades e muita diversão, nosso site lhes apresentam tudo isso e mais um pouco. Além disso, contamos com um quiz super maneiro para testar seus conhecimentos sobre o setor audiovisual de nosso país, há também uma aba com as curiosidades, na qual vocês poderão descobrir diversas coisas legais sobre os desenhos, programas e atores envolvidos nas obras</p>
+            <aside class="imghome">
+                <img src="img/img-home.png" alt="">
+            </aside>
         </article>
-        <aside class="imghome">
-            <img src="img/img-home.png" alt="">
-        </aside>
+        
+      
     <footer class="footer">
         <h4>Mapa do site</h4>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="emissoras.html">Emissoras</a></li>
-            <li><a href="estudios.html">Estúdios</a></li>
-            <li><a href="desenhos.html">Desenhos</a></li>
-            <li><a href="irmao-do-jorel.html">Irmão do Jorel</a></li>
-            <li><a href="oswaldo.html">Oswaldo</a></li>
-            <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
-            <li><a href="programas.html">Programas</a></li>
-            <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
-            <li><a href="cocorico.html">Cocoricó</a></li>
-            <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>
-            <li><a href="curiosidades.html">Curiosidades</a></li>
-            <li><a href="trilha-sonora.html">Trilha Sonora</a></li>
-            <li><a href="quiz.html">Quiz</a></li>
-            <li><a href="quem-somos.html">Quem Somos</a></li>
-            <li><a href="contato.html">Contato</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="emissoras.html">Emissoras</a></li>
+                <li><a href="estudios.html">Estúdios</a></li>
+                <li><a href="desenhos.html">Desenhos</a></li>
+                <li><a href="irmao-do-jorel.html">Irmão do Jorel</a></li>
+                <li><a href="oswaldo.html">Oswaldo</a></li>
+                <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
+                <li><a href="programas.html">Programas</a></li>
+                <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
+                <li><a href="cocorico.html">Cocoricó</a></li>
+                <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>
+                <li><a href="curiosidades.html">Curiosidades</a></li>
+                <li><a href="trilha-sonora.html">Trilha Sonora</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
+                <li><a href="quem-somos.html">Quem Somos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
         <section class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
         </section>
-        <small>&copy Direitos Reservados à Fofurinhas Musicais de Narnia</small>
+        <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
 
