--- a/desenhos.html
+++ b/desenhos.html
@@ -37,6 +37,65 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
+    <article>
+        <h2>A Mansão do Professor Ambrósio</h2>
+        <p>Esse simpático cientista conta com ajudantes bem-humorados: Leslie, um ratinho encrenqueiro e uma aranha nervosinha, Firobela. Todos moram em uma mágica e engraçada mansão, lugar onde personagens históricos ganham vida.</p>
+
+        <h2>Astrobaldo</h2>
+        <p>um garoto que sonha em ser astronauta, imagina cenas espaciais durante seu dia a dia, na qual ele se aventura pelo universo em diversas aventuras</p>
+
+        <h2>Bóris e Rufus</h2>
+        <p>Demonstra as aventuras de um furão e um cachorro, super encrenqueiros e curiosos, aprontam diversas loucuras na internet.</p>
+
+        <h2>Dogmons!</h2>
+        <p>Com apenas um episódio produzido, a série animada e infantil conta a história Alex, Nando e Cris que se transportam para o mundo dos dogmons, onde há seres com superpoderes.</p>
+
+        <h2>Fudêncio e Seus Amigos</h2>
+        <p>Foi uma série de caráter adulto estreada em 2005, na qual mostra o cotidiano e as bizarrices de um grupo de crianças amigas de um garoto punk.</p>
+
+        <h2>Os caça-Livros</h2>
+        <p>Um grupo de jovens passam a recuperar livros que foram escondidos e que, posteriormente, seriam devorados.</p>
+
+        <h2>Princesas do Mar</h2>
+        <p>Em um reino escondido no fundo do mar, chamado: Salácia, habita príncipes e princesas e, cada um, é uma espécie de animal marinho distinto.
+            Eles se escondem de quem habita a terra firme, tudo por conta do medo das guerras.</p>
+        
+        <h2>Peixonauta</h2>
+        <p>Após todos os habitantes de uma cidade sumirem, Peixonauta, Marina e Zico partem ao grande desafio de solucionar esse grande mistério</p>
+
+        <h2>Meu Amigãozão</h2>
+        <p>Yuri, um menino de 5 anos sempre quis um animal de estimação diferente do normal, ele queria um elefante. Após Golias entrar em sua vida ele descobre que seus amigos da escola também havia desejos em ter animais fora do padrão.</p>
+
+        <h2>Sítio do Picapau Amarelo (animação)</h2>
+        <p></p>
+
+        <h2>Cupcake & Dino: Serviços Gerai</h2>
+        <p>Dois irmãos se esforçam para dar continuidade à carreira bem-sucedida de seu pai, que atuava no ramo de serviços gerais, conhecida popularmente por "bicos"</p>
+
+        <h2>De Onde Vem?</h2>
+        <p>A jovem Kika, de 5 anos, com toda sua juventude e curiosidade, questiona tudo que está ao seu redor.</p>
+
+        <h2>Historietas Assombradas (para Crianças Malcriadas)</h2>
+        <p>Mostra a rotina de uma menina bem bagunceira, que só adormece após ouvir histórias de terror.</p>
+
+        <h2>O Show da Luna</h2>
+        <p>A pequena Luna, de 6 anos, vê a terra como um imenso laboratório, o qual ela pode descobrir e saciar tudo que tem curiosidade.</p>
+
+        <h2>Papaya Bull</h2>
+        <p>Na ilha de Papaya, todas as crianças têm um boi, o qual é seu melhor amigo e protetor para a sua vida. Exceto Cacupé que chegou misteriosamente na ilha e acabou ficando com Sócrates, um boi maluco e neurótico.</p>
+
+        <h2>Dino Aventuras</h2>
+        <p>Dino e seus amigos se aventuram por ilhas flutuantes em seu barco voador, a cada novo episódio o pássaro-mensageiro lhes trazem uma nova aventura.</p>
+
+        <h2>O (Sur)real Mundo de Any Malu</h2>
+        <p>Any Malu é uma adolescente que grava vídeos para o YouTube e, em seus vídeos, mostra sua rotina e seus hobbies. Ela sempre conta com a participação de seus amigos, principalmente da Agatha, uma intercambista.</p>
+
+        <h2>Tromba Trem</h2>
+        <p>Um grupo inusitado de animais viajam pela América do Sul em busca de um misterioso dirigível, que um de seus companheiros acredita ser a sua "nave mãe"</p>
+
+        <h2>Mundo Ripilica - As Aventuras de Lilica, a Coala</h2>
+        <p>Um lugar onde seus sonhos e brincadeiras se tornam real. Todas as aventuras que Lilica e seus amigos enfrentam são inspiradas na amizade e na liberdade.</p>
+    </article>
     <aside>
         <img src="img/desenhos/professor-ambrosio.jpg" alt="">
         <img src="img/desenhos/astrobaldo.jpg" alt="">
@@ -47,31 +106,33 @@
     </aside>
     <footer class="footer">
         <h4>Mapa do site</h4>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="emissoras.html">Emissoras</a></li>
-            <li><a href="estudios.html">Estúdios</a></li>
-            <li><a href="desenhos.html">Desenhos</a></li>
-            <li><a href="irmao-do-jorel.html">Irmão do Jorel</a></li>
-            <li><a href="oswaldo.html">Oswaldo</a></li>
-            <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
-            <li><a href="programas.html">Programas</a></li>
-            <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
-            <li><a href="cocorico.html">Cocoricó</a></li>
-            <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>
-            <li><a href="curiosidades.html">Curiosidades</a></li>
-            <li><a href="trilha-sonora.html">Trilha Sonora</a></li>
-            <li><a href="quiz.html">Quiz</a></li>
-            <li><a href="quem-somos.html">Quem Somos</a></li>
-            <li><a href="contato.html">Contato</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="emissoras.html">Emissoras</a></li>
+                <li><a href="estudios.html">Estúdios</a></li>
+                <li><a href="desenhos.html">Desenhos</a></li>
+                <li><a href="irmao-do-jorel.html">Irmão do Jorel</a></li>
+                <li><a href="oswaldo.html">Oswaldo</a></li>
+                <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
+                <li><a href="programas.html">Programas</a></li>
+                <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
+                <li><a href="cocorico.html">Cocoricó</a></li>
+                <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>
+                <li><a href="curiosidades.html">Curiosidades</a></li>
+                <li><a href="trilha-sonora.html">Trilha Sonora</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
+                <li><a href="quem-somos.html">Quem Somos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
         <section class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
         </section>
-        <small>&copy Direitos Reservados à Fofurinhas Musicais de Narnia</small>
+        <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
 
