--- a/programas.html
+++ b/programas.html
@@ -37,34 +37,54 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
+    
+    <article>
+        <h1>Programas</h1>
+        <h2>Glub Glub</h2>
+        <p>Glub-Glub foi um programa infantil brasileiro exibido pela TV Cultura foi entre 1991 a 1999. O programa era focado em dois peixes, ambos chamados Glub, sendo um macho (Carlos Mariano) e uma fêmea (Cecília Homem de Mello). O Cenário era no fundo do mar.</p>
+
+        <h2>Ilha Ra Tim Bum</h2>
+        <p>Paulo Nigro, Greta Antoine, Thuanny Costa, Abayomi de Oliveira e Rafael Formenton interpretam os cinco protagonistas, que acabam indo parar na ilha por acaso e vivem diversas aventuras. Essa ilha é habitada por seres estranhos e fantásticos.</p>
+
+        <h2>Mundo Da Lua</h2>
+        <p>Tudo começa quando Lucas Silva e Silva ganha um gravador de seu avô paterno Orlando ao completar dez anos. Com a passagem da infância para a adolescência, Lucas cria histórias em seu gravador de como gostaria que as coisas fossem.</p>
+
+        <h2>Um menino Muito Maluquinho </h2>
+        <p>A série se focaliza nas aventuras do Menino Maluquinho e seus amigos aos 5 e 10 anos, sendo geralmente narradas por uma versão de 30 anos, enquanto são ensinadas algumas noções sobre arte, valor do dinheiro, tempo, amizade, escola e outros aspectos da vida.</p>
+
+        <h2>X-Tudo</h2>
+        <p>O personagem X era quem comandava boa parte dos quadros e discutia com as crianças os assuntos como biologia, filosofia, história mundial, meio ambiente e cidadania. Além disso, o programa também ensinava as crianças a fazerem truques de mágicas, culinária básica e experimentos científicos.</p>
+    </article>
 
     <footer class="footer">
         <h4>Mapa do site</h4>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="emissoras.html">Emissoras</a></li>
-            <li><a href="estudios.html">Estúdios</a></li>
-            <li><a href="desenhos.html">Desenhos</a></li>
-            <li><a href="irmao-do-jorel.html">Irmão do Jorel</a></li>
-            <li><a href="oswaldo.html">Oswaldo</a></li>
-            <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
-            <li><a href="programas.html">Programas</a></li>
-            <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
-            <li><a href="cocorico.html">Cocoricó</a></li>
-            <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>
-            <li><a href="curiosidades.html">Curiosidades</a></li>
-            <li><a href="trilha-sonora.html">Trilha Sonora</a></li>
-            <li><a href="quiz.html">Quiz</a></li>
-            <li><a href="quem-somos.html">Quem Somos</a></li>
-            <li><a href="contato.html">Contato</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="emissoras.html">Emissoras</a></li>
+                <li><a href="estudios.html">Estúdios</a></li>
+                <li><a href="desenhos.html">Desenhos</a></li>
+                <li><a href="irmao-do-jorel.html">Irmão do Jorel</a></li>
+                <li><a href="oswaldo.html">Oswaldo</a></li>
+                <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
+                <li><a href="programas.html">Programas</a></li>
+                <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
+                <li><a href="cocorico.html">Cocoricó</a></li>
+                <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>
+                <li><a href="curiosidades.html">Curiosidades</a></li>
+                <li><a href="trilha-sonora.html">Trilha Sonora</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
+                <li><a href="quem-somos.html">Quem Somos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
         <section class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
         </section>
-        <small>&copy Direitos Reservados à Fofurinhas Musicais de Narnia</small>
+        <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
 
