--- a/quem-somos.html
+++ b/quem-somos.html
@@ -46,33 +46,35 @@
           programas brasileiros infantis. ✌😊</p>
       </article>
 
-    <footer class="footer">
+      <footer class="footer">
         <h4>Mapa do site</h4>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="emissoras.html">Emissoras</a></li>
-            <li><a href="estudios.html">Estúdios</a></li>
-            <li><a href="desenhos.html">Desenhos</a></li>
-            <li><a href="irmao-do-jorel.html">Irmão do Jorel</a></li>
-            <li><a href="oswaldo.html">Oswaldo</a></li>
-            <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
-            <li><a href="programas.html">Programas</a></li>
-            <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
-            <li><a href="cocorico.html">Cocoricó</a></li>
-            <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>
-            <li><a href="curiosidades.html">Curiosidades</a></li>
-            <li><a href="trilha-sonora.html">Trilha Sonora</a></li>
-            <li><a href="quiz.html">Quiz</a></li>
-            <li><a href="quem-somos.html">Quem Somos</a></li>
-            <li><a href="contato.html">Contato</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="emissoras.html">Emissoras</a></li>
+                <li><a href="estudios.html">Estúdios</a></li>
+                <li><a href="desenhos.html">Desenhos</a></li>
+                <li><a href="irmao-do-jorel.html">Irmão do Jorel</a></li>
+                <li><a href="oswaldo.html">Oswaldo</a></li>
+                <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
+                <li><a href="programas.html">Programas</a></li>
+                <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
+                <li><a href="cocorico.html">Cocoricó</a></li>
+                <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>
+                <li><a href="curiosidades.html">Curiosidades</a></li>
+                <li><a href="trilha-sonora.html">Trilha Sonora</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
+                <li><a href="quem-somos.html">Quem Somos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
         <section class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
         </section>
-        <small>&copy Direitos Reservados à Fofurinhas Musicais de Narnia</small>
+        <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
 
