--- a/trilha-sonora.html
+++ b/trilha-sonora.html
@@ -37,58 +37,51 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
-    <section class="trilha">
+    <article class="trilha">
+        <h1>Trilhas nostálgicas</h1>
         <a href="https://www.youtube.com/watch?v=O9snMaJj62Y" target="_blank"><img src="img/trilha-sonora/abertura-casteloratimbum.jpg" alt="castelo ra tim bum"></a>
-        <a href="https://www.youtube.com/watch?v=s9p9m0ebJmg" target="_blank"><img src="img/trilha-sonora/ratinhotomandobanho.jpg"
-            alt="ratinho tomando banho"></a>
-        <a href="https://www.youtube.com/watch?v=UjUsAQc0T60" target="_blank"><img src="img/trilha-sonora/abertura-cocorico.jpg"
-            alt=" cocorico"></a>
-        <a href="https://www.youtube.com/watch?v=IEBbg20WRsM" target="_blank"><img src="img/trilha-sonora/abertura-trombatrem.jpg"
-            alt="tromba trem"></a>
-        <a href="https://www.youtube.com/watch?v=yApJ7F4z0a4" target="_blank"><img src="img/trilha-sonora/abertura-dogmons.jpg"
-            alt="dogmons"></a>
-        <a href="https://www.youtube.com/watch?v=p4uy4faQLgM" target="_blank"><img src="img/trilha-sonora/abertura-irmaodojorel.jpg"
-            alt="irmão do jorel"></a>
-        <a href="https://www.youtube.com/watch?v=7KEt06ZljRA" target="_blank"><img src="img/trilha-sonora/abertura-fudencio.jpg"
-            alt="fudencio"></a>
+        <a href="https://www.youtube.com/watch?v=s9p9m0ebJmg" target="_blank"><img src="img/trilha-sonora/ratinhotomandobanho.jpg" alt="ratinho tomando banho"></a>
+        <a href="https://www.youtube.com/watch?v=UjUsAQc0T60" target="_blank"><img src="img/trilha-sonora/abertura-cocorico.jpg" alt=" cocorico"></a>
+        <a href="https://www.youtube.com/watch?v=IEBbg20WRsM" target="_blank"><img src="img/trilha-sonora/abertura-trombatrem.jpg" alt="tromba trem"></a>
+        <a href="https://www.youtube.com/watch?v=yApJ7F4z0a4" target="_blank"><img src="img/trilha-sonora/abertura-dogmons.jpg" alt="dogmons"></a>
+        <a href="https://www.youtube.com/watch?v=p4uy4faQLgM" target="_blank"><img src="img/trilha-sonora/abertura-irmaodojorel.jpg" alt="irmão do jorel"></a>
+        <a href="https://www.youtube.com/watch?v=7KEt06ZljRA" target="_blank"><img src="img/trilha-sonora/abertura-fudencio.jpg" alt="fudencio"></a>
         <a href="https://www.youtube.com/watch?v=GO94XCuXEqs" target="_blank"><img src="img/trilha-sonora/abertura-sitiodopicapau-amarelo.jpg" alt="sitio do pica-pau amarelo"></a>
-        <a href="https://www.youtube.com/watch?v=Pia8EBfzhF8" target="_blank"><img src="img/trilha-sonora/superfantastico.jpg"
-            alt="super fantastico"></a>
-        <a href="https://www.youtube.com/watch?v=TpcbIxLbDGk" target="_blank"><img src="img/trilha-sonora/abertura-ratimbum.jpg"
-            alt="ra tim bum"></a>
-        <a href="https://www.youtube.com/watch?v=c-WqcIUP5Gg" target="_blank"><img src="img/trilha-sonora/abertura-mundodalua.jpg"
-            alt="mundo da lua"></a>
-        <a href="https://www.youtube.com/watch?v=yflyejDF5Ao" target="_blank"><img src="img/trilha-sonora/abertura-ilharatimbum.jpg"
-            alt="ilha ra tim bum""></a>
-    </section>
+        <a href="https://www.youtube.com/watch?v=Pia8EBfzhF8" target="_blank"><img src="img/trilha-sonora/superfantastico.jpg" alt="super fantastico"></a>
+        <a href="https://www.youtube.com/watch?v=TpcbIxLbDGk" target="_blank"><img src="img/trilha-sonora/abertura-ratimbum.jpg" alt="ra tim bum"></a>
+        <a href="https://www.youtube.com/watch?v=c-WqcIUP5Gg" target="_blank"><img src="img/trilha-sonora/abertura-mundodalua.jpg" alt="mundo da lua"></a>
+        <a href="https://www.youtube.com/watch?v=yflyejDF5Ao" target="_blank"><img src="img/trilha-sonora/abertura-ilharatimbum.jpg" alt="ilha ra tim bum"></a>
+    </article>
 
     <footer class="footer">
         <h4>Mapa do site</h4>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="emissoras.html">Emissoras</a></li>
-            <li><a href="estudios.html">Estúdios</a></li>
-            <li><a href="desenhos.html">Desenhos</a></li>
-            <li><a href="irmao-do-jorel.html">Irmão do Jorel</a></li>
-            <li><a href="oswaldo.html">Oswaldo</a></li>
-            <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
-            <li><a href="programas.html">Programas</a></li>
-            <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
-            <li><a href="cocorico.html">Cocoricó</a></li>
-            <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>
-            <li><a href="curiosidades.html">Curiosidades</a></li>
-            <li><a href="trilha-sonora.html">Trilha Sonora</a></li>
-            <li><a href="quiz.html">Quiz</a></li>
-            <li><a href="quem-somos.html">Quem Somos</a></li>
-            <li><a href="contato.html">Contato</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="emissoras.html">Emissoras</a></li>
+                <li><a href="estudios.html">Estúdios</a></li>
+                <li><a href="desenhos.html">Desenhos</a></li>
+                <li><a href="irmao-do-jorel.html">Irmão do Jorel</a></li>
+                <li><a href="oswaldo.html">Oswaldo</a></li>
+                <li><a href="turma-da-monica.html">Turma da Mônica</a></li>
+                <li><a href="programas.html">Programas</a></li>
+                <li><a href="castelo-ra-tim-bum.html">Castelo Rá-Tim-Bum</a></li>
+                <li><a href="cocorico.html">Cocoricó</a></li>
+                <li><a href="sitio-do-picapau-amarelo.html">Sitio do Picapau Amarelo</a></li>
+                <li><a href="curiosidades.html">Curiosidades</a></li>
+                <li><a href="trilha-sonora.html">Trilha Sonora</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
+                <li><a href="quem-somos.html">Quem Somos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
         <img class="logo-branca" src="img/logo-branca.png" alt="Logo em Branco">
         <section class="redes-sociais">
             <img src="img/facebook.png" alt="Logo Facebook">
             <img src="img/instagram.png" alt="Logo Instagram">
             <img src="img/twitter.png" alt="Logo Twitter">
         </section>
-        <small>&copy Direitos Reservados à Fofurinhas Musicais de Narnia</small>
+        <small>&copy; Direitos Reservados à <a href="quem-somos.html"> Fofurinhas Musicais de Narnia</a></small>
     </footer>
 </body>
 
